--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,10 +1,10 @@
-name: Generate Snake
+name: Generate Snake Contribution Grid
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Her gün gece 00:00'da çalıştır
+    - cron: "0 0 * * *"  # Her gün gece yarısı çalıştırır
 
-  workflow_dispatch:  # Manuel olarak çalıştırma izni
+  workflow_dispatch:  # Manuel çalıştırmaya izin verir
 
 jobs:
   generate:
@@ -13,14 +13,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Ensure output directory exists
+        run: mkdir -p dist
+
       - name: Generate Snake
-        uses: Platane/snk@v3
+        uses: Platane/snk@master
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: dist/snake.svg
 
-      - name: Push Snake to Output Branch
-        uses: actions/upload-artifact@v3
-        with:
-          name: snake
-          path: dist/snake.svg
+      - name: Commit and push the snake animation
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add output/github-contribution-grid-snake.svg
+          git commit -m "Generated contribution grid snake"
+          git push
